Adusted margins and spacing formatting issues, grid still needs completed

--- a/styles.css
+++ b/styles.css
@@ -7,29 +7,35 @@
 
 h2{
   letter-spacing: 2px;
-  margin: 160px 0px 20px 200px;
+  padding-bottom: 3%;
   font-size: 35px;
   color: rgb(100, 51, 145);
   font-size: 45px;
 }
 
 p{
-  margin: 0px 90px 0px 200px;
+  margin-bottom: 8%;
 }
 
 a{
-  margin: 30px 0px;
   text-decoration: none;
   color: rgb(100, 51, 145);
   font-weight: 800;
   letter-spacing: 1px;
-  margin-left: 200px;
+}
+
+.textColumn{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: rgb(106, 106, 106);
+  padding-left: 10%;
 }
 
 button {
   font-size: 15px;
   letter-spacing: 1px;
-  padding: 15px 15px;
+  padding: 2% 2%;
   border: 0px;
   color: white;
   border-radius: 4px;
@@ -43,12 +49,43 @@ button {
   background-image: url(front-end-dev-test-assets/hero.jpg);
   background-size: cover;
   position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.header button{
+  padding: 1% 2%;
+}
+
+#welcome{
+  flex-grow: 1;
+  align-content: center;
+  justify-content: center;
+  padding-bottom: 30px;
+}
+
+.headerMenu{
+  display: flex;
+  justify-content: space-between;
+}
+
+#sideMenu{
+  display: block;
+  padding: 40px 0px 40px 40px;
+} 
+
+#sideMenu a{
+  margin: 10px;
+} 
+
+a{
+  align-items: center;
+  font-size: 20px;
 }
 
 .logo{
-  width: 325px;
+  width: 23%;
   padding: 30px;
-  margin-left: 100px;
 }
 
 span {
@@ -60,7 +97,7 @@ span {
 }
 
 h1{
-  margin-top: 170px;
+  display: block;
   font-size: 70px;
   color: white;
   text-align: center;
@@ -69,10 +106,10 @@ h1{
 
 .headerButton{
   background-color: rgb(148, 83, 183);
-  margin-top: 30px;
   display: block; 
   margin-left: auto; 
   margin-right: auto; 
+  margin-top: 20px;
 }
 
 /* ----------------Second Row --------------------- */
@@ -80,21 +117,21 @@ h1{
 .secondRow{
   height: 75vh; 
   display: flex;
-  flex-wrap: wrap;
 }
 
 .textColumn{
   width: 50vw; 
-  display: flex;
-  flex-direction: column;
-  color: rgb(106, 106, 106);
+}
+
+.textContainer{
+  width: 60%;
 }
 
 .photoColumn {
   width: 50vw;
   background: url(front-end-dev-test-assets/img-1.jpg) no-repeat center center; 
   background-size: cover; 
-  display: flex;
+  
 }
 
 
@@ -110,14 +147,14 @@ h1{
   justify-content: center;
 }
 
-.thirdRow h2{
-  margin: 0px 0px 20px 200px;
+.thirdRow .textContainer{
+  margin-left: 10%;
+
 }
 
 .thirdRow button {
   background-color: rgb(255, 140, 0);
   width: 200px;
-  margin-left: 200px;
 }
 
 /* ----------------- Fourth Row --------------------- */
@@ -126,12 +163,12 @@ h1{
   height: 75vh;
 }
 
-
 .gridContainer{
   width: 50vw;
 }
 .iconGrid {
-  padding: 120px 150px 150px 150px;
+  /* go back and double check */
+  padding: 120px 150px 150px 150px; 
   grid-template-columns: repeat(2, 1fr);
   display: grid;
   gap: 150px;
@@ -150,19 +187,12 @@ h1{
   padding: 10px;
 }
 
-.fourthRow .textColumn {
-  display: block;
-  margin: auto;
-}
-
 .fourthRow h2{
-  margin: 40px 0px 20px 200px;
   color: black;
 }
-.fourthRow p{
-  margin-bottom: 20px;
+.fourthRow .textContainer{
+  width: 90%;
 }
-
 
 
 
